refactor: enhance endpoint and entities naming
